--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+body {
+  @apply flex flex-col items-center;
+}
+
+#root {
+  @apply w-full;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
